lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:18: error: ')' expected but integer literal found.
		i +=	1
                        ^